Turning off the Trait creation phase for now. Traits will only be created via Class abilities